# aws-demo-simple-task-queue

./: .envrc  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/api/: handler.py
backend/worker/: handler.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  DocsPage.tsx  api.ts  styles.css  types.ts
scripts/: bootstrap-tfstate.sh  deploy-frontend-local.sh  deploy-frontend.sh
terraform/: .gitignore  apigw.tf  cicd.tf  frontend.tf  lambda.tf  main.tf  outputs.tf  variables.tf  versions.tf
