[project]
name = "task-queue-demo"
version = "0.1.0"
requires-python = ">=3.14"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
exclude = ["*.md"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "RUF",   # ruff-specific rules
]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
explicit_package_bases = true
mypy_path = "backend"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "aws-lambda-typing>=2.20.0",
    "boto3>=1.42.89",
    "boto3-stubs[dynamodb, sqs]>=1.42.89",
    "mypy>=1.20.1",
]
